@@ -71,7 +71,12 @@ class _File(object):
                 # name does not begin with a drive letter (Windows), try to
                 # get it over the web.
                 #
-            self.name, _ = urllib.urlretrieve(fileobj)
+            try:
+                self.name, _ = urllib.urlretrieve(fileobj)
+            except (TypeError, ValueError):
+                # A couple different exceptions can occur here when passing a
+                # filename into urlretrieve in Python 3
+                raise IOError('File does not exist: %r' % fileobj)
         else:
             self.name = fileobj_name(fileobj)
 
